# auto-homelab

./: .env.example  .gitignore  DEVELOPER.md  IMPROVEMENTS.md  Justfile  LICENSE  Makefile  OLD.md  README.md  TODO.md  backup.py  cloud_backup.py  docker-compose.yml  go.mod  go.sum  main.go  pyproject.toml
app/: configure.py  copy_conf_files.py  env.schema.json  env_vars.py  printer.py
app/tests/: test_printer.py
cmd/: backup.go  configure.go  restore.go  root.go  start.go  stop.go
config/adguard/: AdGuardHome.yaml.template  start-adguard.sh
documentation/: adguard.md  backups.md  docker.md  just.md  paperless.md  portainer.md  restic_backblaze.md  scripts-shell.md  traefik.md
documentation/code/: README.md  accept_interfaces_return_structs.md  errors.md  errors_ignored.md  json_marshalling.md  slog.md  t_fatal_vs_t_error.md
files/adguard/: Dockerfile
files/adguard/scripts/: AdGuardHome.yaml.template  start-adguard.sh
files/config/: env.config.json  env.config.schema.json
files/traefik/: traefik.yaml
internal/backup/: cloud_backup.go  cloud_backup_test.go  local.go  local_backup.go  local_backup_list.go  local_backup_list_test.go  local_backup_test.go  local_utils.go  restic_client.go  restic_client_test.go  test_mocks_tests.go
internal/config/: configurer.go  configurer_test.go  models.go  prompter.go  prompter_test.go  registry.go  registry_test.go  strategies.go  strategies_test.go  test_mocks_test.go
internal/docker/: compose.go  compose_test.go  runner.go  runner_test.go
internal/dotenv/: loader.go
internal/files/: files.go  filesystem.go
internal/format/: text.go  text_test.go
internal/require/: require.go
internal/system/: cmd.go  commands.go  commands_test.go  env.go  env_test.go  files.go  files_test.go  filesystem.go  stdlib_wrapper.go  stdlib_wrapper_test.go  system.go  system_test.go  time.go  time_test.go
scripts/: backup.py  cloud_backup.py  configure.py  env.config.json  env.config.schema.json  env.schema.json  env_vars.py  loc.py  printer.py  restore_immich.py  validator.py
scripts-shell/: restore_immich.sh  restore_paperless.sh
scripts/backup/: cloud.py  local.py
scripts/configuration/: configure.py  env.config.json  env_vars.py
scripts/tests/: test_env_vars.py  test_printer.py
